<resources>
    <string name="app_name" translatable="false">Zodis</string>
    <string name="content_authority">com.betatech.alex.zodis</string>

    <!--Main Activity-->
    <string name="text_learn">Learn</string>
    <string name="text_insights">Insights</string>
    <string name="text_settings">Settings</string>
    <string name="no_network_message">No internet connection.\n Try switching on network connectivity.</string>
    <string name="loading_message">Loading...</string>
    <string name="database_error_message">Something went wrong. Try refreshing.</string>

    <!-- Login Activity  -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--Table header-->
    <string name="root_header">Root word</string>
    <string name="derived_header">Derived word</string>
    <string name="description_header">Meaning</string>

    <string name="text_profile">Profile</string>
    <string name="connect_msg">Connect with google+ to share your progress</string>
    <string name="default_user_name">Guest</string>
    <string name="level_completed">Level Completed</string>
    <string name="total_xp">Total XP</string>


    <!-- fragment_user.xml -->
    <string name="xp_message">%1$d XP</string>
    <string name="level_messages">%1$d/%2$d</string>
    <string name="no_internet_message">Please turn on your Internet connection!</string>
    <string name="insight_message">You haven\'t completed any level.\n Complete levels to show words here.</string>

    <!-- AlarmReceiver -->
    <string name="alarm_receiver_action" translatable="false">com.betatech.alex.zodis.DISPLAY_NOTIFICATION</string>
    <string name="notification_title">Hello, %1$s!</string>
    <string name="notification_description">Don\'t forget to practise daily &amp; increase your vocabulary.</string>
    <string name="show_level_name">Level %1$s</string>

    <!--Unique KEY for setTag method in LevelsAdapter-->
    <string name="KEY_LESSON_ID" translatable="false">lesson_id</string>
    <string name="KEY_LESSON_NAME" translatable="false">lesson_name</string>
    <string name="al_button_quiz">Quiz</string>
    <string name="aq_button_check_message">Check</string>
    <string name="question_frame">What does %1$s means?</string>
    <string name="correct_message">Correct!</string>
    <string name="aq_button_continue_message">Continue</string>
    <string name="wrong_message">Wrong!</string>
    <string name="cancel_dialog_title">Do you really want to quit?</string>
    <string name="cancel_dialog_description">All progress in this session will be lost.</string>
    <string name="cancel_dialog_positive_text">Cancel</string>
    <string name="cancel_dialog_negative_text">Quit</string>
    <string name="right_answer_message">Correct answer is : %1$s</string>


    <string name="sign_in_button_text">Sign In</string>
    <string name="skip_button_text">Skip</string>


    <!-- Content description for all buttons and image to better support accessibility-->
    <string name="cancel_button_content_description">Click to exit this activity</string>
    <string name="check_button_content_description">Click to check whether your selected answer is correct or not</string>
    <string name="button_left_content_description">Click to swipe left</string>
    <string name="quiz_button_content_description">Click to start the Quiz</string>
    <string name="button_right_content_description">Click to swipe right</string>
    <string name="skip_button_content_description">Click to skip login process</string>
    <string name="image_view_user_pic_content_description">Placeholder to display user profile picture</string>

    <string name="radio_button_one_content_description">Choice first</string>
    <string name="radio_button_two_content_description">Choice second</string>
    <string name="radio_button_three_content_description">Choice third</string>
    <string name="radio_button_four_content_description">Choice fourth</string>
    <string name="radio_button_five_content_description">Choice fifth</string>
    <string name="tick_image_content_description">Image of a check mark</string>
    <string name="level_image_content_description">Unique image for each level</string>
    <string name="practice_completed">Practice complete!</string>
    <string name="_10xp">+10XP!</string>
    <string name="continue_button_content_description">Exit</string>
    <string name="share_button_content_description">Click to share your victory on your google + profile</string>
    <string name="victory_image_content_description">Image of a trophy</string>
    <string name="share_on_google_text">Share on Google+</string>
    <string name="continue_text">Continue</string>


    <!--Interstitial Ad Test id-->
    <string name="interstitialId" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="google_plus_share_message">Hello everyone! Just learnt some awesome root words on \"Zodis\" app. Go and download the app today.</string>
    <string name="quiz_continue_button_content_description">Click to see next question</string>
    <string name="database_error">Problem fetching data from database!</string>
    <string name="database_empty">Database is empty!</string>
    <string name="quiz_error">Unable to start QuizActivity!</string>
    <string name="google_connection_failed">Connection failed!</string>
    <string name="cannot_camplete_request">Unable to access the account!</string>
    <string name="databse_updated">Successfully updated!</string>
</resources>
